# gear_opportunity_predictor.py

./: .gitignore  .gitnore  LICENSE  README.md  gear_opportunity_predictor.py  pyproject.toml
docs/: bennonacci_visuals.md
docs/schemas/: vehicle_profile.schema.json
docs/schemas/schemas/: control_profile.schema.json
docs/schemas/schemas/schemas/: visual_profile.schema.json
docs/schemas/schemas/schemas/schemas/: sparki_profile.schema.json
docs/schemas/schemas/schemas/schemas/presets/: stock_safe.json
docs/schemas/schemas/schemas/schemas/presets/presets/: p_mode.json
docs/schemas/schemas/schemas/schemas/presets/presets/presets/: daily_prv.json
docs/schemas/schemas/schemas/schemas/presets/presets/presets/presets/: longevity_max.json
docs/schemas/schemas/schemas/schemas/presets/presets/presets/presets/presets/: sport_smart.json
docs/schemas/schemas/schemas/schemas/presets/presets/presets/presets/presets/presets/: aggressive_controlled.json
docs/schemas/schemas/schemas/schemas/presets/presets/presets/presets/presets/presets/presets/: heat_soak_defense.json
docs/schemas/schemas/schemas/schemas/presets/presets/presets/presets/presets/presets/presets/presets/: wet_low_grip.json
docs/schemas/schemas/schemas/schemas/presets/presets/presets/presets/presets/presets/presets/presets/presets/: tow_load.json
src/gear_opportunity_predictor/: main.py
whitepaper/: TOTALITY_OBD_EQUALISER_WHITEPAPER.md
whitepaper/docs/: architecture.md
whitepaper/docs/docs/: dash_ui.md
(+9 files in other folders)
