[project]
name = "totality-gear-opportunity"
version = "0.1.0"
description = "Supervisory vehicle equaliser and gear opportunity predictor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "numpy",
    "pandas",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest","ruff","mypy"]

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"
